# vm-virtio

crates/devices/virtio-console/: Cargo.toml
crates/devices/virtio-console/src/: console.rs
